--- a/main.html
+++ b/main.html
@@ -11,6 +11,42 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
+	<form method="post">
+  <label for="name">Name *</label>
+  <input type="text" id="name" name="name" required>
+
+  <label for="email">Email *</label>
+  <input type="email" id="email" name="email" required>
+
+  <label>Gender *</label>
+  <label for="gender-male">Male</label>
+  <input type="radio" id="gender-male" name="gender" value="male" required>
+
+  <label for="gender-female">Female</label>
+  <input type="radio" id="gender-female" name="gender" value="female" required>
+
+  <label for="laptop">Laptop Brand</label>
+  <select id="laptop" name="laptop">
+    <option value="apple">Apple</option>
+    <option value="asus">Asus</option>
+    <option value="hp">HP</option>
+  </select>
+
+  <label for="age">Age *</label>
+  <input type="number" id="age" name="age" required>
+
+  <label for="dob">DOB *</label>
+  <input type="date" id="dob" name="dob" required>
+
+  <label for="password">Password *</label>
+  <input type="password" id="password" name="password" required>
+
+  <label for="portfolio">Portfolio URL</label>
+  <input type="url" id="portfolio" name="portfolio">
+
+  <button type="submit">Submit</button>
+</form>
+
 </body>
 
 </html>
